feat: adding three models BERT, RoBERTa, ELECTRA. altering the codebase correspondingly.

--- a/old/03_train_lstm.ipynb
+++ b/old/03_train_lstm.ipynb
@@ -1049,7 +1049,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_26\"\u001b[0m\n"
+       "\u001B[1mModel: \"sequential_26\"\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -1081,23 +1081,23 @@
       ],
       "text/plain": [
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
-       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┃\u001B[1m \u001B[0m\u001B[1mLayer (type)                   \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1mOutput Shape          \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1m      Param #\u001B[0m\u001B[1m \u001B[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ embedding_26 (\u001b[38;5;33mEmbedding\u001b[0m)        │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m35\u001b[0m, \u001b[38;5;34m200\u001b[0m)        │     \u001b[38;5;34m3,012,800\u001b[0m │\n",
+       "│ embedding_26 (\u001B[38;5;33mEmbedding\u001B[0m)        │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m35\u001B[0m, \u001B[38;5;34m200\u001B[0m)        │     \u001B[38;5;34m3,012,800\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ bidirectional_26                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m384\u001b[0m)            │       \u001b[38;5;34m603,648\u001b[0m │\n",
-       "│ (\u001b[38;5;33mBidirectional\u001b[0m)                 │                        │               │\n",
+       "│ bidirectional_26                │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m384\u001B[0m)            │       \u001B[38;5;34m603,648\u001B[0m │\n",
+       "│ (\u001B[38;5;33mBidirectional\u001B[0m)                 │                        │               │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ batch_normalization_26          │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m384\u001b[0m)            │         \u001b[38;5;34m1,536\u001b[0m │\n",
-       "│ (\u001b[38;5;33mBatchNormalization\u001b[0m)            │                        │               │\n",
+       "│ batch_normalization_26          │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m384\u001B[0m)            │         \u001B[38;5;34m1,536\u001B[0m │\n",
+       "│ (\u001B[38;5;33mBatchNormalization\u001B[0m)            │                        │               │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dropout_52 (\u001b[38;5;33mDropout\u001b[0m)            │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m384\u001b[0m)            │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ dropout_52 (\u001B[38;5;33mDropout\u001B[0m)            │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m384\u001B[0m)            │             \u001B[38;5;34m0\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_52 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m64\u001b[0m)             │        \u001b[38;5;34m24,640\u001b[0m │\n",
+       "│ dense_52 (\u001B[38;5;33mDense\u001B[0m)                │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m64\u001B[0m)             │        \u001B[38;5;34m24,640\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dropout_53 (\u001b[38;5;33mDropout\u001b[0m)            │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m64\u001b[0m)             │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ dropout_53 (\u001B[38;5;33mDropout\u001B[0m)            │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m64\u001B[0m)             │             \u001B[38;5;34m0\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_53 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m6\u001b[0m)              │           \u001b[38;5;34m390\u001b[0m │\n",
+       "│ dense_53 (\u001B[38;5;33mDense\u001B[0m)                │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m6\u001B[0m)              │           \u001B[38;5;34m390\u001B[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -1111,7 +1111,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m3,643,014\u001b[0m (13.90 MB)\n"
+       "\u001B[1m Total params: \u001B[0m\u001B[38;5;34m3,643,014\u001B[0m (13.90 MB)\n"
       ]
      },
      "metadata": {},
@@ -1124,7 +1124,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m629,446\u001b[0m (2.40 MB)\n"
+       "\u001B[1m Trainable params: \u001B[0m\u001B[38;5;34m629,446\u001B[0m (2.40 MB)\n"
       ]
      },
      "metadata": {},
@@ -1137,7 +1137,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m3,013,568\u001b[0m (11.50 MB)\n"
+       "\u001B[1m Non-trainable params: \u001B[0m\u001B[38;5;34m3,013,568\u001B[0m (11.50 MB)\n"
       ]
      },
      "metadata": {},
@@ -1228,27 +1228,27 @@
       "This prevents overfitting while allowing enough training time.\n",
       "\n",
       "Epoch 1/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 11ms/step - accuracy: 0.6060 - loss: 1.0807 - val_accuracy: 0.7615 - val_loss: 0.6493\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m7s\u001B[0m 11ms/step - accuracy: 0.6060 - loss: 1.0807 - val_accuracy: 0.7615 - val_loss: 0.6493\n",
       "Epoch 2/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step - accuracy: 0.8108 - loss: 0.5356 - val_accuracy: 0.8525 - val_loss: 0.3901\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m5s\u001B[0m 11ms/step - accuracy: 0.8108 - loss: 0.5356 - val_accuracy: 0.8525 - val_loss: 0.3901\n",
       "Epoch 3/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step - accuracy: 0.8819 - loss: 0.3213 - val_accuracy: 0.8985 - val_loss: 0.2659\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m5s\u001B[0m 11ms/step - accuracy: 0.8819 - loss: 0.3213 - val_accuracy: 0.8985 - val_loss: 0.2659\n",
       "Epoch 4/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step - accuracy: 0.9077 - loss: 0.2389 - val_accuracy: 0.8995 - val_loss: 0.2855\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m5s\u001B[0m 11ms/step - accuracy: 0.9077 - loss: 0.2389 - val_accuracy: 0.8995 - val_loss: 0.2855\n",
       "Epoch 5/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step - accuracy: 0.9224 - loss: 0.1920 - val_accuracy: 0.8950 - val_loss: 0.2798\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m5s\u001B[0m 11ms/step - accuracy: 0.9224 - loss: 0.1920 - val_accuracy: 0.8950 - val_loss: 0.2798\n",
       "Epoch 6/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step - accuracy: 0.9338 - loss: 0.1563 - val_accuracy: 0.9165 - val_loss: 0.1998\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m5s\u001B[0m 11ms/step - accuracy: 0.9338 - loss: 0.1563 - val_accuracy: 0.9165 - val_loss: 0.1998\n",
       "Epoch 7/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step - accuracy: 0.9418 - loss: 0.1297 - val_accuracy: 0.9120 - val_loss: 0.2192\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m5s\u001B[0m 11ms/step - accuracy: 0.9418 - loss: 0.1297 - val_accuracy: 0.9120 - val_loss: 0.2192\n",
       "Epoch 8/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 13ms/step - accuracy: 0.9480 - loss: 0.1229 - val_accuracy: 0.9155 - val_loss: 0.2118\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m7s\u001B[0m 13ms/step - accuracy: 0.9480 - loss: 0.1229 - val_accuracy: 0.9155 - val_loss: 0.2118\n",
       "Epoch 9/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 15ms/step - accuracy: 0.9511 - loss: 0.1140 - val_accuracy: 0.9065 - val_loss: 0.2607\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m7s\u001B[0m 15ms/step - accuracy: 0.9511 - loss: 0.1140 - val_accuracy: 0.9065 - val_loss: 0.2607\n",
       "Epoch 10/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 15ms/step - accuracy: 0.9541 - loss: 0.1030 - val_accuracy: 0.9280 - val_loss: 0.2198\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m7s\u001B[0m 15ms/step - accuracy: 0.9541 - loss: 0.1030 - val_accuracy: 0.9280 - val_loss: 0.2198\n",
       "Epoch 11/30\n",
-      "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 14ms/step - accuracy: 0.9587 - loss: 0.0934 - val_accuracy: 0.9175 - val_loss: 0.2297\n",
+      "\u001B[1m500/500\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m7s\u001B[0m 14ms/step - accuracy: 0.9587 - loss: 0.0934 - val_accuracy: 0.9175 - val_loss: 0.2297\n",
       "Epoch 11: early stopping\n",
       "Restoring model weights from the end of the best epoch: 6.\n",
       "\n",
@@ -1527,7 +1527,7 @@
     "import os\n",
     "\n",
     "# Create output directory\n",
-    "output_dir = './data/lstm'\n",
+    "output_dir = '../data/lstm'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Save the final model\n",
