--- a/old/02_train_gru.ipynb
+++ b/old/02_train_gru.ipynb
@@ -1585,7 +1585,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_49\"\u001b[0m\n"
+       "\u001B[1mModel: \"sequential_49\"\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -1617,23 +1617,23 @@
       ],
       "text/plain": [
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
-       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┃\u001B[1m \u001B[0m\u001B[1mLayer (type)                   \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1mOutput Shape          \u001B[0m\u001B[1m \u001B[0m┃\u001B[1m \u001B[0m\u001B[1m      Param #\u001B[0m\u001B[1m \u001B[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ embedding_49 (\u001b[38;5;33mEmbedding\u001b[0m)        │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m35\u001b[0m, \u001b[38;5;34m300\u001b[0m)        │     \u001b[38;5;34m4,519,200\u001b[0m │\n",
+       "│ embedding_49 (\u001B[38;5;33mEmbedding\u001B[0m)        │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m35\u001B[0m, \u001B[38;5;34m300\u001B[0m)        │     \u001B[38;5;34m4,519,200\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ bidirectional_49                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m192\u001b[0m)            │       \u001b[38;5;34m229,248\u001b[0m │\n",
-       "│ (\u001b[38;5;33mBidirectional\u001b[0m)                 │                        │               │\n",
+       "│ bidirectional_49                │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m192\u001B[0m)            │       \u001B[38;5;34m229,248\u001B[0m │\n",
+       "│ (\u001B[38;5;33mBidirectional\u001B[0m)                 │                        │               │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ batch_normalization_49          │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m192\u001b[0m)            │           \u001b[38;5;34m768\u001b[0m │\n",
-       "│ (\u001b[38;5;33mBatchNormalization\u001b[0m)            │                        │               │\n",
+       "│ batch_normalization_49          │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m192\u001B[0m)            │           \u001B[38;5;34m768\u001B[0m │\n",
+       "│ (\u001B[38;5;33mBatchNormalization\u001B[0m)            │                        │               │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dropout_98 (\u001b[38;5;33mDropout\u001b[0m)            │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m192\u001b[0m)            │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ dropout_98 (\u001B[38;5;33mDropout\u001B[0m)            │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m192\u001B[0m)            │             \u001B[38;5;34m0\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_98 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m64\u001b[0m)             │        \u001b[38;5;34m12,352\u001b[0m │\n",
+       "│ dense_98 (\u001B[38;5;33mDense\u001B[0m)                │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m64\u001B[0m)             │        \u001B[38;5;34m12,352\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dropout_99 (\u001b[38;5;33mDropout\u001b[0m)            │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m64\u001b[0m)             │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ dropout_99 (\u001B[38;5;33mDropout\u001B[0m)            │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m64\u001B[0m)             │             \u001B[38;5;34m0\u001B[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_99 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m6\u001b[0m)              │           \u001b[38;5;34m390\u001b[0m │\n",
+       "│ dense_99 (\u001B[38;5;33mDense\u001B[0m)                │ (\u001B[38;5;45mNone\u001B[0m, \u001B[38;5;34m6\u001B[0m)              │           \u001B[38;5;34m390\u001B[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -1647,7 +1647,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m4,761,958\u001b[0m (18.17 MB)\n"
+       "\u001B[1m Total params: \u001B[0m\u001B[38;5;34m4,761,958\u001B[0m (18.17 MB)\n"
       ]
      },
      "metadata": {},
@@ -1660,7 +1660,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m242,374\u001b[0m (946.77 KB)\n"
+       "\u001B[1m Trainable params: \u001B[0m\u001B[38;5;34m242,374\u001B[0m (946.77 KB)\n"
       ]
      },
      "metadata": {},
@@ -1673,7 +1673,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m4,519,584\u001b[0m (17.24 MB)\n"
+       "\u001B[1m Non-trainable params: \u001B[0m\u001B[38;5;34m4,519,584\u001B[0m (17.24 MB)\n"
       ]
      },
      "metadata": {},
@@ -1764,39 +1764,39 @@
       "This prevents overfitting while allowing enough training time.\n",
       "\n",
       "Epoch 1/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 12ms/step - accuracy: 0.7570 - loss: 0.6893 - val_accuracy: 0.7600 - val_loss: 1.8364\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m15s\u001B[0m 12ms/step - accuracy: 0.7570 - loss: 0.6893 - val_accuracy: 0.7600 - val_loss: 1.8364\n",
       "Epoch 2/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.8901 - loss: 0.3109 - val_accuracy: 0.9270 - val_loss: 0.1815\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m11s\u001B[0m 11ms/step - accuracy: 0.8901 - loss: 0.3109 - val_accuracy: 0.9270 - val_loss: 0.1815\n",
       "Epoch 3/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 10ms/step - accuracy: 0.9072 - loss: 0.2518 - val_accuracy: 0.8925 - val_loss: 0.4332\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m11s\u001B[0m 10ms/step - accuracy: 0.9072 - loss: 0.2518 - val_accuracy: 0.8925 - val_loss: 0.4332\n",
       "Epoch 4/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 12ms/step - accuracy: 0.9174 - loss: 0.2211 - val_accuracy: 0.9240 - val_loss: 0.1453\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m12s\u001B[0m 12ms/step - accuracy: 0.9174 - loss: 0.2211 - val_accuracy: 0.9240 - val_loss: 0.1453\n",
       "Epoch 5/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 10ms/step - accuracy: 0.9197 - loss: 0.2045 - val_accuracy: 0.9270 - val_loss: 0.1644\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m10s\u001B[0m 10ms/step - accuracy: 0.9197 - loss: 0.2045 - val_accuracy: 0.9270 - val_loss: 0.1644\n",
       "Epoch 6/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.9222 - loss: 0.1948 - val_accuracy: 0.9320 - val_loss: 0.1579\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m11s\u001B[0m 11ms/step - accuracy: 0.9222 - loss: 0.1948 - val_accuracy: 0.9320 - val_loss: 0.1579\n",
       "Epoch 7/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.9201 - loss: 0.1968 - val_accuracy: 0.9300 - val_loss: 0.1449\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m11s\u001B[0m 11ms/step - accuracy: 0.9201 - loss: 0.1968 - val_accuracy: 0.9300 - val_loss: 0.1449\n",
       "Epoch 8/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.9214 - loss: 0.1975 - val_accuracy: 0.9385 - val_loss: 0.1366\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m11s\u001B[0m 11ms/step - accuracy: 0.9214 - loss: 0.1975 - val_accuracy: 0.9385 - val_loss: 0.1366\n",
       "Epoch 9/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.9249 - loss: 0.1775 - val_accuracy: 0.9385 - val_loss: 0.1592\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m11s\u001B[0m 11ms/step - accuracy: 0.9249 - loss: 0.1775 - val_accuracy: 0.9385 - val_loss: 0.1592\n",
       "Epoch 10/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.9268 - loss: 0.1821 - val_accuracy: 0.9290 - val_loss: 0.2596\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m11s\u001B[0m 11ms/step - accuracy: 0.9268 - loss: 0.1821 - val_accuracy: 0.9290 - val_loss: 0.2596\n",
       "Epoch 11/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 10ms/step - accuracy: 0.9252 - loss: 0.1776 - val_accuracy: 0.9350 - val_loss: 0.1386\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m10s\u001B[0m 10ms/step - accuracy: 0.9252 - loss: 0.1776 - val_accuracy: 0.9350 - val_loss: 0.1386\n",
       "Epoch 12/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 10ms/step - accuracy: 0.9276 - loss: 0.1804 - val_accuracy: 0.9280 - val_loss: 0.1344\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m10s\u001B[0m 10ms/step - accuracy: 0.9276 - loss: 0.1804 - val_accuracy: 0.9280 - val_loss: 0.1344\n",
       "Epoch 13/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 10ms/step - accuracy: 0.9272 - loss: 0.1772 - val_accuracy: 0.9340 - val_loss: 0.1541\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m10s\u001B[0m 10ms/step - accuracy: 0.9272 - loss: 0.1772 - val_accuracy: 0.9340 - val_loss: 0.1541\n",
       "Epoch 14/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.9292 - loss: 0.1651 - val_accuracy: 0.9335 - val_loss: 0.1552\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m11s\u001B[0m 11ms/step - accuracy: 0.9292 - loss: 0.1651 - val_accuracy: 0.9335 - val_loss: 0.1552\n",
       "Epoch 15/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 10ms/step - accuracy: 0.9285 - loss: 0.1689 - val_accuracy: 0.9270 - val_loss: 0.1464\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m10s\u001B[0m 10ms/step - accuracy: 0.9285 - loss: 0.1689 - val_accuracy: 0.9270 - val_loss: 0.1464\n",
       "Epoch 16/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 10ms/step - accuracy: 0.9281 - loss: 0.1798 - val_accuracy: 0.9320 - val_loss: 0.1365\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m10s\u001B[0m 10ms/step - accuracy: 0.9281 - loss: 0.1798 - val_accuracy: 0.9320 - val_loss: 0.1365\n",
       "Epoch 17/30\n",
-      "\u001b[1m1000/1000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 9ms/step - accuracy: 0.9251 - loss: 0.1788 - val_accuracy: 0.9295 - val_loss: 0.1652\n",
+      "\u001B[1m1000/1000\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m9s\u001B[0m 9ms/step - accuracy: 0.9251 - loss: 0.1788 - val_accuracy: 0.9295 - val_loss: 0.1652\n",
       "Epoch 17: early stopping\n",
       "Restoring model weights from the end of the best epoch: 12.\n",
       "\n",
@@ -2083,7 +2083,7 @@
     "import os\n",
     "\n",
     "# Create output directory\n",
-    "output_dir = './data/gru'\n",
+    "output_dir = '../data/gru'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Save the final model\n",
