refactor: Dana's comment.

--- a/report.tex
+++ b/report.tex
@@ -17,7 +17,7 @@
 
 % Title formatting
 \title{\vspace{-1cm}\textbf{Assignment 2 - NLP using DL techniques (83374)}}
-\author{Dana Gibor (322274234) \and Ido Sar Shalom (212410146) \and Natalya Sigal (306688466)}
+\author{Dana Gibor \and Ido Sar Shalom \and Natalya Sigal }
 \date{}
 
 \begin{document}
